--- a/alarm.service
+++ b/alarm.service
@@ -4,7 +4,7 @@
 
  [Service]
  Type=idle
- ExecStart=/usr/bin/python3 /home/pi/blinkCameraAlarm/main.py
+ ExecStart=/usr/bin/bash /home/pi/blinkCameraAlarm/start.sh
 
  [Install]
  WantedBy=multi-user.target
