--- a/vars.env
+++ b/vars.env
@@ -8,4 +8,4 @@ ALARM_THRESHOLD_EVENT_COUNT=2
 ALARM_CYCLES_TOTAL=30
 ALARM_CYCLE_TIME_SECONDS=30
 MAX_LOG_SIZE_MB=150
-LOG_PATH=.
+LOG_PATH=/home/pi/alarm_logs/alarm.log
